--- a/src/components/Expense-panel/ExpenseInput/ExpenseInput.scss
+++ b/src/components/Expense-panel/ExpenseInput/ExpenseInput.scss
@@ -8,7 +8,9 @@
     border-radius: 15px;
 
     form {
+        position: relative;
         width: 95%;
+        height: inherit;
         display: flex;
         flex-direction: column;
         .expanse-input__expense-inp {
@@ -18,6 +20,24 @@
             border: none;
             outline: none;
             border-bottom: 1px solid white;
+
+        }
+        .expanse-input__footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .expanse-input__clear-btn {
+                width: 90px;
+                height: 30px;
+            }
+            .expanse-input__submit-btn {
+                width: 180px;
+                height: 30px;
+            }
         }
     }
 }
