--- a/src/components/Expense-panel/ExpenseInput/ExpenseInput.scss
+++ b/src/components/Expense-panel/ExpenseInput/ExpenseInput.scss
@@ -20,8 +20,25 @@
             border: none;
             outline: none;
             border-bottom: 1px solid white;
-
         }
+
+        .expanse-input__categories {
+            margin-top: 20px;
+            width: 100%;
+            display: flex;
+            gap: 20px;
+            div {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 50px;
+                height: 50px;
+                border: 1px solid white;
+                border-radius: 50%;
+                cursor: pointer;
+            }
+        }
+
         .expanse-input__footer {
             position: absolute;
             bottom: 0;
