--- a/src/components/Expense-panel/ExpenseGraph/ExpenseGraph.scss
+++ b/src/components/Expense-panel/ExpenseGraph/ExpenseGraph.scss
@@ -1,6 +1,9 @@
 .expanse-graph__container {
     width: 650px;
     height: 95%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 15px;
     box-shadow: inset 0 0 25px white;
 }
